Added a new paragraph

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 <body>
 	<h1>Test de GH Pages</h1>
 	<h2>Esta es una pagina para demostrar como se usa github pages</h2>
+	<p>Hola de nuevo</p>
+
 </body>
 </html>
