Added hola and edited index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<h1>Test de GH Pages</h1>
 	<h2>Esta es una pagina para demostrar como se usa github pages</h2>
 	<p>Hola de nuevo</p>
+	<a href="hola.html">Yo llego a hola</a>
 
 </body>
 </html>
